--- a/springJDBCBoard/src/main/resources/application.properties
+++ b/springJDBCBoard/src/main/resources/application.properties
@@ -1,23 +1,23 @@
 spring.application.name=springJDBCBoard
 
-## jsp 파일 처리하기 위한 prefix와 suffix를 추가 
+## jsp 파일 처리하기 위한 prefix와 suffix를 추가
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-## 파일업로드설정 
-## 개별 파일 사이즈(5MB) 넘어버리면 업로드 거부됨.
+## 파일 업로드설정
+## 개별 파일 사이즈(10MB) 넘어버리면 업로드 거부
 spring.servlet.multipart.max-file-size=5MB
-## 모든파일 합산크기(10MB) 넘어버리면 업로드 거부됨.
+## 한 번의 HTTP 요청으로 업로드되는 모든 파일의 합산 크기(10MB) 넘어버리면 업로드 거부
 spring.servlet.multipart.max-request-size=10MB
 
-## 외장하드 (데이타베이스: 절대중복되지않는파일명을 만들어서 넣는다) 
+## 외장하드 (데이타베이스: 절대중복되지않는파일명을 만들어서 넣는다)
 upload.path=D:/upload
 
-#메시지등록
-spring.messages.basename=message.message
+##메세지 등록
+##spring.messages.basename=message.message
 
-## 데이터베이스 환경설정
+##DB설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url= jdbc:oracle:thin:@127.0.0.1:1521:XE
-spring.datasource.username=HR
+spring.datasource.username=hr
 spring.datasource.password=hr
